compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bools__binop_todo_left.snap
---
source: compiler-core/src/go/tests/bools.rs
expression: "pub fn negate(x) {\n    todo && x\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn negate(x) {
    todo && x
}

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Negate(x gleam_P.Bool_t) gleam_P.Bool_t {
  return (func() gleam_P.Bool_t {
    panic(gleam_P.MakeError(
      "todo",
      "my/mod",
      2,
      "negate",
      "`todo` expression evaluated. This code has not yet been implemented.",
      map[string]any{},
    ))
  })() && x
}
