compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bools__expressions.snap
---
source: compiler-core/src/go/tests/bools.rs
expression: "\nfn go() {\n    True\n    False\n    Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
    True
    False
    Nil
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ() gleam_P.Nil_t {
  _ = true
  _ = false
  return gleam_P.Nil_c{}
}
