compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bools__negate_panic.snap
---
source: compiler-core/src/go/tests/bools.rs
expression: "pub fn negate(x) {\n  !panic\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn negate(x) {
  !panic
}

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Negate[I gleam_P.Type[I]](x I) gleam_P.Bool_t {
  return !(func() gleam_P.Bool_t {
    panic(gleam_P.MakeError(
      "panic",
      "my/mod",
      2,
      "negate",
      "`panic` expression evaluated.",
      map[string]any{},
    ))
  })()
}
