compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bools__nil_case.snap
---
source: compiler-core/src/go/tests/bools.rs
expression: "\nfn go(a) {\n  case a {\n    Nil -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(a) {
  case a {
    Nil -> 0
  }
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ(a gleam_P.Nil_t) gleam_P.Int_t {
  {
    return 0
  }
}
